--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0A5F69</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#333487</color>
+    <color name="colorPrimaryDark">#252674</color>
     <color name="colorAccent">#03DAC5</color>
 
     <color name="colorWhite">#fffafa</color>
+    <color name="colorOrange">#FF7849</color>
 </resources>
