--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -122,6 +122,16 @@
                 android:layout_height="wrap_content"
                 android:text="Masuk"/>
         </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/loginError"
+            android:text="Error: Token tidak boleh kosong"
+            android:visibility="gone"
+            android:layout_marginTop="8dp"
+            android:textSize="16sp"
+            android:padding="4dp"
+            android:textColor="@android:color/holo_red_light"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
